# adaptive_patches_for_mesh_denoising

./: .gitignore  GENERATE_VC15_x64.bat  README.md
data/: fandisk.off  fandisk_noisy0.1.off
shaders/: FragmentShaderCodeNormalMap.glsl
src/: CMakeLists.txt
src/application/: main.cpp  test.cpp  test.h
src/core/: CMakeLists.txt
src/core/include/core/: adaptive_kernel.h  curvature.h  denoising.h  iomesh.h  mesh.h  metric.h  neighborhood.h  noise.h  solver.h  util.h
src/core/src/: adaptive_kernel.cpp  curvature.cpp  denoising.cpp  iomesh.cpp  metric.cpp  neighborhood.cpp  noise.cpp  solver.cpp  util.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: myDataManager.h  myGLWindow.h  myMainWindow.h  smoothing.h
src/gui/src/: myDataManager.cpp  myGLWindow.cpp  myMainWindow.cpp  smoothing.cpp
src/visualization/: CMakeLists.txt
src/visualization/include/visualization/: myShape.h
src/visualization/src/: myCamera.cpp  myRenderer.cpp  myShader.cpp  myShape.cpp
